Quickstart: Fix contrast
(integrated from master branch change 9.2.1-484-g40b8093 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -6,7 +6,7 @@
     @background-primary:    lighten(@background, 5%);
     
     @foreground-focus:      lighten(@foreground, 20%);
-    @background-contrast:   darken(@background-primary, 5%);
+    @background-contrast:   darken(@background-primary, 10%);
     @border:                @background;
     @background-button:     @background-contrast;
     @background-button-hover:darken(@background-contrast, 5%);
@@ -77,7 +77,7 @@
     @background-primary:    darken(@background, 10%);
     
     @foreground-focus:      darken(@foreground, 10%);
-    @background-contrast:   darken(@background-primary, 5%);
+    @background-contrast:   darken(@background-primary, 3%);
     @border:                @background;
     @background-button:     @background-contrast;
     @background-button-hover:lighten(@background-contrast, 5%);
